--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </h1>
     <p>v0.1 alpha</p>
     <img src="images/smart-home-sketch-bg.png" alt="bg" class="img-fluid">
-    <p style="margin-top: 50px">Copyright @hataketsu 2018</p>
+    <p style="margin-top: 50px">Copyright &copy;2018 <a href="https://github.com/hataketsu/">hataketsu</a> . Nothing has been reversed.</p>
     <style>
         canvas {
             display:block;
