--- a/devices.html
+++ b/devices.html
@@ -43,7 +43,7 @@
         SMART HOME
     </h1>
 
-    <h1 class="text-center">
+    <h1 class="text-center" onclick="start_listen()">
         <small><i class="fa fa-microphone-alt"></i> {{speak_text}}</small>
     </h1>
     <hr>
@@ -109,7 +109,7 @@
     app.controller('controller', function ($scope, kmqtt) {
         var client = kmqtt.connect('wss://hungank.com:8000/');
         $scope.speak_text = 'Loading';
-        $scope.devices = [{name: 'a', status: 'ON', id: 'dwsfAWfw', type: 'dimmer',value:70}];
+        $scope.devices = [];
         $scope.uids_set = [];
 
         $scope.turnOnOff = (value, uid) => {
@@ -139,7 +139,9 @@
             $scope.devices[$scope.uids_set.indexOf(device.id)] = device;
             $scope.$applyAsync();
         });
-
+        $scope.start_listen = () => {
+            annyang.start({autoRestart: false, continuous: false});
+        };
         client.subscribe('control/out');
 
         function sendCommand(cmd) {
@@ -150,6 +152,8 @@
             sendCommand({'command': 'poll'});
         }, 5000);
         if (annyang) {
+
+
             setTimeout(() => {
                 readOutLoud('sẵn sàng');
             }, 3000);
@@ -165,6 +169,18 @@
                     $scope.speak_text = 'Bạn nói: ' + result[0];
                     $scope.$applyAsync();
                 }
+            });
+            annyang.addCallback('start', () => {
+                $scope.speak_text = 'Đang lắng nghe...';
+                $scope.$applyAsync();
+            });
+            annyang.addCallback('error', () => {
+                $scope.speak_text = 'Lỗi!';
+                $scope.$applyAsync();
+            });
+            annyang.addCallback('end', () => {
+                $scope.speak_text = 'Đã dừng lại. Bấm để bắt đầu lắng nghe';
+                $scope.$applyAsync();
             });
 
             function led(number) {
@@ -182,8 +198,12 @@
                     sendCommand({'command': 'voice', 'name': device.toLowerCase(), 'value': 1})
                 }
             });
-            annyang.start();
-            $scope.speak_text = 'Đang lắng nghe...';
+            if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
+                $scope.speak_text = 'Bấm để bắt đầu lắng nghe';
+                $scope.$applyAsync();
+            } else {
+                annyang.start();
+            }
         }
     });
 </script>
