--- a/devices/index.html
+++ b/devices/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="img/ico" href="favicon.ico">
+    <link rel="icon" type="img/ico" href="../favicon.ico">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
     <title>Smart Home</title>
     <script
             src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-    <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.min.css">
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.css">
+    <link rel="stylesheet" href="../bower_components/seiyria-bootstrap-slider/dist/css/bootstrap-slider.min.css">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.5/angular.min.js"></script>
-    <script src="bower_components/angularjs-mqtt/browserMqtt.js"></script>
-    <script src="bower_components/angularjs-mqtt/mqtt.js"></script>
-    <script src="bower_components/seiyria-bootstrap-slider/dist/bootstrap-slider.min.js"></script>
-    <script src="bower_components/angular-bootstrap-slider/slider.js"></script>
+    <script src="../bower_components/angularjs-mqtt/browserMqtt.js"></script>
+    <script src="../bower_components/angularjs-mqtt/mqtt.js"></script>
+    <script src="../bower_components/seiyria-bootstrap-slider/dist/bootstrap-slider.min.js"></script>
+    <script src="../bower_components/angular-bootstrap-slider/slider.js"></script>
     <script src='https://code.responsivevoice.org/responsivevoice.js'></script>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
           integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
@@ -24,7 +24,7 @@
 
         @font-face {
             font-family: 'Raleway';
-            src: url('fonts/Raleway-Light-vi.ttf') format('truetype');
+            src: url('../fonts/Raleway-Light-vi.ttf') format('truetype');
         }
 
         body {
