--- a/devices/index.html
+++ b/devices/index.html
@@ -43,8 +43,12 @@
         SMART HOME
     </h1>
 
-    <h1 class="text-center" onclick="start_listen()">
-        <small><i class="fa fa-microphone-alt"></i> {{speak_text}}</small>
+    <h1 class="text-center">
+        <button class="btn btn-outline-success btn-lg" href="#" ng-click="start_listen()">
+            <i class="fa fa-microphone-alt"></i>
+        </button>
+        {{speak_text}}
+
     </h1>
     <hr>
     <div class="row">
