--- a/devices/index.html
+++ b/devices/index.html
@@ -127,7 +127,7 @@
 <script>
     var sendCommand;
     const app = angular.module('speaker', ['kmqtt', 'ui.bootstrap-slider']);
-    app.controller('controller', function ($scope, kmqtt) {
+    app.controller('controller', function ($scope, kmqtt,$http) {
         var client = kmqtt.connect('wss://hungank.com:8000/');
         $scope.speak_text = 'Loading';
         $scope.devices = [];
@@ -186,7 +186,7 @@
             $scope.speak_text = 'Đang lắng nghe...';
             $scope.$applyAsync();
             console.log('Started');
-                // annyang.start();
+            // annyang.start();
 
             if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
                 annyang.start({autoRestart: false, continuous: false});
@@ -213,6 +213,7 @@
                 if (result.length > 0) {
                     $scope.speak_text = 'Bạn nói: ' + result[0];
                     $scope.$applyAsync();
+                    $http.get('http://localhost:5000/?text=' + result[0]);
                 }
             });
             // annyang.addCallback('start', () => {
