--- a/devices/index.html
+++ b/devices/index.html
@@ -213,7 +213,7 @@
                 if (result.length > 0) {
                     $scope.speak_text = 'Bạn nói: ' + result[0];
                     $scope.$applyAsync();
-                    $http.get('http://localhost:5000/?text=' + result[0]);
+                    $http.get('https://localhost:5000/?text=' + result[0]);
                 }
             });
             // annyang.addCallback('start', () => {
