--- a/devices/index.html
+++ b/devices/index.html
@@ -250,10 +250,12 @@
                 }, 'thông báo môi trường': () => {
                     $http.get('https://localhost:5000/temphumi').then((res) => {
                         console.log(res);
-                        let humi = res.humi.toFixed(1);
-                        let temp = res.temp.toFixed(1);
+                        let humi = res.data.humi.toFixed(1);
+                        let temp = res.data.temp.toFixed(1);
                         console.log(humi);
                         console.log(temp);
+                        readOutLoud('nhiệt độ là ' + temp + 'độ xê');
+                        readOutLoud('độ ẩm là' + humi + ' %');
                     });
                 }
             });
