--- a/devices/index.html
+++ b/devices/index.html
@@ -254,10 +254,10 @@
                         let temp = res.data.temp.toFixed(1);
                         console.log(humi);
                         console.log(temp);
-                        readOutLoud('nhiệt độ là ' + temp + 'độ xê');
+                        readOutLoud('nhiệt độ là ' + temp + '°C');
                         setTimeout(() => {
-                            readOutLoud('độ ẩm là ' + humi + ' %');
-                        }, 5000);
+                            readOutLoud('độ ẩm là ' + humi + '%');
+                        }, 4000);
                     });
                 }
             });
