--- a/devices/index.html
+++ b/devices/index.html
@@ -254,8 +254,8 @@
                     }
 
                 },
-                'cài đặt tốc độ *device là *percent%': change_speed,
-                'cài đặt tốc độ *device là *percent phần trăm': change_speed,
+                'cài đặt *device là *percent%': change_speed,
+                'cài đặt *device là *percent phần trăm': change_speed,
                 'thông báo môi trường': () => {
                     $http.get('https://localhost:5000/temphumi').then((res) => {
                         console.log(res);
