--- a/devices/index.html
+++ b/devices/index.html
@@ -201,7 +201,7 @@
 
             setTimeout(() => {
                 readOutLoud('sẵn sàng');
-            }, 3000);
+            }, 6000);
             annyang.debug(true);
             annyang.setLanguage('vi-VN');
 
@@ -273,8 +273,8 @@
                             readOutLoud('độ ẩm là ' + humi + '%');
                         }, 4000);
                     });
-                }, 'xin chào mon': () => {
-                    readOutLoud('Chào sếp, sếp muốn em giúp gì');
+                }, "xin chào mon": () => {
+                    readOutLoud("Chào sếp, sếp muốn em giúp gì");
                 }
             });
 
